--- a/src/components/hero-section/Hero.css
+++ b/src/components/hero-section/Hero.css
@@ -23,8 +23,16 @@
   border-radius: 4px;
   padding: 8px;
   margin: 40px auto 100px auto;
-  align-items: center;
+  width: 60%;
   font-family: 'Open Sans', sans-serif;
+}
+.locationType {
+  flex: 1;
+  padding-left: 20px;
+}
+
+.locationType .MuiInputBase-root {
+  width: 100%;
 }
 
 @media (max-width: 789px) {
