--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 30px 60px;
+  margin: 0px 60px;
+  align-items: baseline;
 }
 
 .Name {
