--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -46,3 +46,25 @@
 .FooterButton {
   display: flex;
 }
+
+@media (max-width: 789px) {
+  .WrapperFooter {
+    flex-direction: column;
+    align-items: center;
+  }
+  .Sec1 {
+    text-align: center;
+  }
+  .Sec4 {
+    text-align: center;
+  }
+  .FooterButton {
+    display: block;
+  }
+  .FooterButton .MuiInputBase-root {
+    margin-bottom: 20px;
+  }
+  .Horizontal {
+    margin: 0px 30px;
+  }
+}
