--- a/src/components/section8/Section8.css
+++ b/src/components/section8/Section8.css
@@ -14,6 +14,9 @@
   font-size: 3em;
   margin-bottom: 60px;
 }
+.Mobiles {
+  margin-top: 450px;
+}
 
 @media (max-width: 789px) {
   .Section8 {
@@ -31,5 +34,6 @@
 
   .Mobiles {
     width: 500px;
+    margin-top: 100px;
   }
 }
